# VideoPub

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
deploy/: com.videopub.watch.plist  install.sh  uninstall.sh
tests/: test_bilibili_uploader.py  test_cli.py  test_cover_utils.py  test_docx_pdf_parser.py  test_e2e.py  test_mcp_server.py  test_metadata_parser.py  test_models.py  test_orchestrator.py  test_page_helpers.py  test_status.py  test_youtube_uploader.py
videopub/: __init__.py  cli.py  logging_config.py  mcp_server.py
videopub/config/: __init__.py  settings.yaml
videopub/core/: config_loader.py  cover_utils.py  metadata_parser.py  models.py  orchestrator.py  retry.py  status.py
videopub/uploaders/: __init__.py  base.py  browser_base.py
videopub/uploaders/bilibili/: __init__.py  uploader.py
videopub/uploaders/douyin/: __init__.py  uploader.py
videopub/uploaders/douyin/pages/: __init__.py  login_page.py  upload_page.py
videopub/uploaders/wechat/: __init__.py  uploader.py
videopub/uploaders/wechat/pages/: __init__.py  login_page.py  upload_page.py
videopub/uploaders/youtube/: __init__.py  uploader.py
